--- a/client/src/pages/AuthPages.css
+++ b/client/src/pages/AuthPages.css
@@ -1,3 +1,8 @@
+:root {
+  --color-secondary-text: #666666;
+  --color-link: #61dafb;
+}
+
 .auth-page {
   min-height: calc(100vh - 80px);
   display: flex;
@@ -12,12 +17,12 @@
 }
 
 .auth-switch p {
-  color: #666;
+  color: var(--color-secondary-text);
   font-size: 0.95rem;
 }
 
 .auth-switch a {
-  color: #61dafb;
+  color: var(--color-link);
   text-decoration: none;
   font-weight: 600;
 }
